# Optimization-methods-lab-works

./: CMakeLists.txt  build script.bat
include/: common.h  custom.h  multi_dim.h  numerics.h  one_dim.h  search_result.h  search_result_nd.h
lib/numerics/: CMakeLists.txt
lib/numerics/linalg/: numeric_vector.h
src/: CMakeLists.txt  custom.cpp  main.cpp  multi_dim.cpp  numerics.cpp  one_dim.cpp  search_result.cpp  search_result_nd.cpp
